--- a/index.html
+++ b/index.html
@@ -64,12 +64,16 @@
         verbose mode
         <input id="verbose" type="checkbox"/>
       </label>
+      <label>
+        dump config to console
+        <input id="dumpConfig" type="checkbox"/>
+      </label>
     </section>
     <section>
       <h1>chart options</h1>
       <label>
         chart title
-        <input id="chartTitle" type="text">
+        <input id="chartTitle" type="text" placeholder="something descriptive">
       </label>
       <label>
         fill under chart
